--- a/hft_bcs/templates/hft_bcs/index.html
+++ b/hft_bcs/templates/hft_bcs/index.html
@@ -305,7 +305,12 @@ Socket Actions
             var total_traders = total_makers + total_snipers;
             document.querySelector("info-table").num_traders = total_traders;
             document.querySelector("info-table").num_makers = total_makers;
+        } else if(obj.BATCH != undefined){
+            console.log("FBA Batch Message");
+            //Flash Spread Graph
+            //Draw the next lines in Profit Graph with time period
         }
+
     };
 
     // Show a disconnected message when the WebSocket is closed.
