--- a/hft_bcs/templates/hft_bcs/index.html
+++ b/hft_bcs/templates/hft_bcs/index.html
@@ -100,6 +100,7 @@ Constant, Player, and Group Information from oTree stored in the oTreeConstants 
     oTreeConstants.end_msg = "off";
     oTreeConstants.batch_length = 3;
     oTreeConstants.FBA = false;
+
     if(oTreeConstants.batch_length != undefined){
         oTreeConstants.FBA  = true; 
     }
@@ -113,6 +114,7 @@ Graph_Features is an object that stores the features of the profit and spread gr
     Spread_Graph.spread_x = document.querySelector("spread-graph").getBoundingClientRect().left;
     Spread_Graph.spread_y = document.querySelector("spread-graph").getBoundingClientRect().top;
     Spread_Graph.spread_lines = {};
+    Spread_Graph.spreadLinesFBA = {};
     Spread_Graph.last_spread =  oTreeConstants.default_spread;
 
     //PROFIT GRAPH
@@ -310,22 +312,17 @@ Socket Actions
             var total_traders = total_makers + total_snipers;
             document.querySelector("info-table").num_traders = total_traders;
             document.querySelector("info-table").num_makers = total_makers;
-
-            //For testing purposes
-            console.log("FBA Batch Message in index.html");
-            //Flash Spread Graph
-            //Draw the next lines in Profit Graph with time period
-  
-            Spread_Graph.drawBatchFlash();
-
      
         } else if(obj.BATCH != undefined){
+            
             // if(){
             //     if this is start of batch
-            //      start timer
+            //      Input_Section.startTimer(); ??
             // } else if (){
             //     if batch has just been processed
-            //     draw batch lines and flash spread graph
+            //     Spread_Graph.drawBatchFlash();
+            //     Spread_Graph.saveSpreadLines();
+            //      
             //}
             //Flash Spread Graph
             Spread_Graph.drawBatchFlash();
