--- a/hft_bcs/templates/hft_bcs/index.html
+++ b/hft_bcs/templates/hft_bcs/index.html
@@ -313,22 +313,14 @@ Socket Actions
             document.querySelector("info-table").num_traders = total_traders;
             document.querySelector("info-table").num_makers = total_makers;
      
-        } else if(obj.BATCH != undefined){
-            
-            // if(){
-            //     if this is start of batch
-            //      Input_Section.startTimer(); ??
-            // } else if (){
-            //     if batch has just been processed
-            //     Spread_Graph.drawBatchFlash();
-            //     Spread_Graph.saveSpreadLines();
-            //      
-            //}
+        } else if(obj.BATCH == "P"){
+            //if batch has been processed
+            //Spread_Graph.saveSpreadLines();
             //Flash Spread Graph
             Spread_Graph.drawBatchFlash();
-            //draw timer reset
-
-
+        } else if(obj.BATCH == "B"){
+            //If batch start
+            //Reset and Start Timer 
         }
     };
 
