Min Spread added as well as stagnant spread lines fixed

--- a/hft_bcs/templates/hft_bcs/index.html
+++ b/hft_bcs/templates/hft_bcs/index.html
@@ -48,7 +48,7 @@
                     location.reload();
             });
         }
-        console.log("All files loaded");
+
         oTreeConstants.file_ready = true;
         
     }());
@@ -94,11 +94,12 @@ Constant, Player, and Group Information from oTree stored in the oTreeConstants 
     oTreeConstants.starting_wealth = {{player.profit}};
     oTreeConstants.startFP = {{player.default_fp}}; 
     oTreeConstants.smallest_spread = {"key":-1, "spread":oTreeConstants.max_spread};
+    oTreeConstants.min_spread = 0.01 * 10000;
     oTreeConstants.round_length = {{subsession.round_length}};
     oTreeConstants.timeOffset = 0; 
     oTreeConstants.speed_cost = {{player.speed_cost}};
     oTreeConstants.end_msg = "off";
-    oTreeConstants.batch_length = 3;
+    oTreeConstants.batch_length = undefined;
     oTreeConstants.FBA = false;
 
     if(oTreeConstants.batch_length != undefined){
@@ -165,7 +166,9 @@ Socket Actions
             var FPCDollarAmount = (obj.FPC*(1e-4)).toFixed(2);
             document.querySelector('info-table').fp = FPCDollarAmount;
             Spread_Graph.updateBidAndAsk(FPCDollarAmount,spread);
-            Spread_Graph.clear();
+            //Spread_Graph.clear();
+            Spread_Graph.spread_svg.selectAll(".others_line").remove();
+            Spread_Graph.spread_svg.selectAll("rect").remove();
             Spread_Graph.drawMySpreadLines({}, difference / 10);
             for(var key in Spread_Graph.spread_lines){
 
@@ -174,10 +177,10 @@ Socket Actions
                     Spread_Graph.spread_lines[key][token] -= parseInt(difference);
                 }
             }
-            window.setTimeout(function(){
-                Spread_Graph.clear();
-                Spread_Graph.drawMySpreadLines({}, 0);
-            },500);
+            // window.setTimeout(function(){
+            //     Spread_Graph.clear();
+            //     Spread_Graph.drawMySpreadLines({}, 0);
+            // },500);
         }else if(obj.EXEC != undefined){
             var timeNow = Profit_Graph.getTime() - oTreeConstants.timeOffset;
             var exec = {};
@@ -313,7 +316,8 @@ Socket Actions
             document.querySelector("info-table").num_traders = total_traders;
             document.querySelector("info-table").num_makers = total_makers;
      
-        } else if(obj.BATCH == "P"){
+        } else if(obj.BATCH != undefined){
+            console.log("BATCH has come in bruhhhh");
             //if batch has been processed
             //Spread_Graph.saveSpreadLines();
             //Flash Spread Graph
