--- a/hft_bcs/templates/hft_bcs/index.html
+++ b/hft_bcs/templates/hft_bcs/index.html
@@ -27,7 +27,7 @@
     <div class="overlay"></div>
 <script>
     //Stores all the constants defined in Constansts in models.py and pulled from a presumed manifest file of some sort
-    let oTreeConstants = {};
+    let otreeConstants = {};
 
     (function(){
 
@@ -35,7 +35,7 @@
             polymer: "/static/hft_bcs/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js",
             input_section: "/static/hft_bcs/input-section/input-section.js",
             spread_graph: "/static/hft_bcs/spread-graph/spread-graph.js",
-            profit_graph: "/static/hft_bcs/profit-graph/profit-graph.js",
+            profitGraph: "/static/hft_bcs/profit-graph/profit-graph.js",
             info_table: "/static/hft_bcs/info-table/info-table.js"
         };
 
@@ -49,7 +49,7 @@
             });
         }
 
-        oTreeConstants.file_ready = true;
+        otreeConstants.fileReady = true;
         
     }());
 </script>
@@ -74,54 +74,56 @@
 //All socket actions are stored in this object to be used in the seperated js files
 let socketActions = {};
 
-let Spread_Graph = {};
+let spreadGraph = {};
 
-let Profit_Graph = {};
+let profitGraph = {};
 
-let Input_Section = {};
+let inputSection = {};
 
 (function(){
 
 /*  
 IMPORTANT:
-Constant, Player, and Group Information from oTree stored in the oTreeConstants objects
+Constant, Player, and Group Information from oTree stored in the otreeConstants objects
 */
-    oTreeConstants.group_id = {{group.id}};
-    oTreeConstants.player_id = {{player.id}};
-    oTreeConstants.player_id_in_group = {{player.id_in_group}}; 
-    oTreeConstants.max_spread = {{player.max_spread}}; 
-    oTreeConstants.default_spread = {{player.spread}};
-    oTreeConstants.starting_wealth = {{player.profit}};
-    oTreeConstants.startFP = {{player.default_fp}}; 
-    oTreeConstants.smallest_spread = {"key":-1, "spread":oTreeConstants.max_spread};
-    oTreeConstants.min_spread = 100;
-    oTreeConstants.round_length = {{subsession.round_length}};
-    oTreeConstants.timeOffset = 0; 
-    oTreeConstants.speed_cost = {{player.speed_cost}};
-    console.log(oTreeConstants.speed_cost);
-    oTreeConstants.end_msg = "off";
-    oTreeConstants.batch_length = undefined;
-    oTreeConstants.FBA = false;
+    otreeConstants.groupID = {{group.id}};
+    otreeConstants.playerID = {{player.id}};
+    otreeConstants.playerIDInGroup = {{player.id_in_group}}; 
+    otreeConstants.maxSpread = {{player.max_spread}}; 
+    otreeConstants.defaultSpread = {{player.spread}};
+    otreeConstants.startingWealth = {{player.profit}};
+    otreeConstants.startFP = {{player.default_fp}}; 
+    otreeConstants.smallestSpread = {"key":-1, "spread":otreeConstants.maxSpread};
+    otreeConstants.min_spread = 100;
+    otreeConstants.roundLength = {{subsession.round_length}};
+    otreeConstants.timeOffset = 0; 
+    otreeConstants.speedCost = {{player.speed_cost}};
+    otreeConstants.endMsg = "off";
+    otreeConstants.batchLength = 5;
+    otreeConstants.CDA = false; //Continuous Double Auction
+    otreeConstants.FBA = false; //Frequent Batch Auction
 
-    if(oTreeConstants.batch_length != undefined){
-        oTreeConstants.FBA  = true; 
+    if(otreeConstants.batchLength != undefined){
+        otreeConstants.FBA  = true; 
+    } else{
+        otreeConstants.CDA = true;
     }
 /*
 IMPORTANT:
 Graph_Features is an object that stores the features of the profit and spread graph that are only able to be retrieved in index.html. This object is used in spread-graph.js and profit-graph.js
 */
     //SPREAD GRAPH
-    Spread_Graph.spread_width = document.querySelector("spread-graph").clientWidth;
-    Spread_Graph.spread_height = document.querySelector("spread-graph").clientHeight;
-    Spread_Graph.spread_x = document.querySelector("spread-graph").getBoundingClientRect().left;
-    Spread_Graph.spread_y = document.querySelector("spread-graph").getBoundingClientRect().top;
-    Spread_Graph.spread_lines = {};
-    Spread_Graph.spreadLinesFBA = {};
-    Spread_Graph.last_spread =  oTreeConstants.default_spread;
+    spreadGraph.spread_width = document.querySelector("spread-graph").clientWidth;
+    spreadGraph.spread_height = document.querySelector("spread-graph").clientHeight;
+    spreadGraph.spread_x = document.querySelector("spread-graph").getBoundingClientRect().left;
+    spreadGraph.spread_y = document.querySelector("spread-graph").getBoundingClientRect().top;
+    spreadGraph.spread_lines = {};
+    spreadGraph.spreadLinesFBA = {};
+    spreadGraph.last_spread =  otreeConstants.defaultSpread;
 
     //PROFIT GRAPH
-    Profit_Graph.profit_width = document.querySelector("profit-graph").clientWidth;
-    Profit_Graph.profit_height = document.querySelector("profit-graph").clientHeight;
+    profitGraph.profit_width = document.querySelector("profit-graph").clientWidth;
+    profitGraph.profit_height = document.querySelector("profit-graph").clientHeight;
 
 
 /*
@@ -161,60 +163,60 @@ Socket Actions
 
 
         if(obj.FPC != undefined){
-            Spread_Graph.drawMySpreadLines({}, 0, {}, true);
+            spreadGraph.drawMySpreadLines({}, 0, {}, true);
             
             var difference = fund_price - obj.FPC;
             var FPCDollarAmount = (obj.FPC*(1e-4)).toFixed(2);
             document.querySelector('info-table').fp = FPCDollarAmount;
-            Spread_Graph.updateBidAndAsk(FPCDollarAmount,spread);
-            Spread_Graph.spread_svg.selectAll(".others_line").remove();
-            Spread_Graph.spread_svg.selectAll("rect").remove();
-            Spread_Graph.drawMySpreadLines({}, difference / 10);
-            for(var key in Spread_Graph.spread_lines){
+            spreadGraph.updateBidAndAsk(FPCDollarAmount,spread);
+            spreadGraph.spread_svg.selectAll(".others_line").remove();
+            spreadGraph.spread_svg.selectAll("rect").remove();
+            spreadGraph.drawMySpreadLines({}, difference / 10);
+            for(var key in spreadGraph.spread_lines){
 
-                for(var token in Spread_Graph.spread_lines[key]){
-                    Spread_Graph.spread_lines[key][token] -= parseInt(difference);
-                    Spread_Graph.spread_lines[key][token] -= parseInt(difference);
+                for(var token in spreadGraph.spread_lines[key]){
+                    spreadGraph.spread_lines[key][token] -= parseInt(difference);
+                    spreadGraph.spread_lines[key][token] -= parseInt(difference);
                 }
             }
         }else if(obj.EXEC != undefined){
-            var timeNow = Profit_Graph.getTime() - oTreeConstants.timeOffset;
+            var timeNow = profitGraph.getTime() - otreeConstants.timeOffset;
             var exec = {};
             exec["player"] = obj.EXEC.id;
             exec["side"] = obj.EXEC.token[4];
             exec["profit"] = obj.EXEC.profit;
 
-            Spread_Graph.clear();
-            Spread_Graph.drawMySpreadLines({}, 0, exec);
+            spreadGraph.clear();
+            spreadGraph.drawMySpreadLines({}, 0, exec);
           
-            if(obj.EXEC.id == oTreeConstants.player_id_in_group){
+            if(obj.EXEC.id == otreeConstants.playerIDInGroup){
                 
-                Profit_Graph.profitJumps.push(
+                profitGraph.profitJumps.push(
                     {
                         timestamp:timeNow,
-                        oldProfit:Profit_Graph.profit,
-                        newProfit:Profit_Graph.profit + obj.EXEC.profit, 
+                        oldProfit:profitGraph.profit,
+                        newProfit:profitGraph.profit + obj.EXEC.profit, 
                     }
                 );
 
-                Profit_Graph.profit += obj.EXEC.profit;
-                Profit_Graph.profitSegments.push(
+                profitGraph.profit += obj.EXEC.profit;
+                profitGraph.profitSegments.push(
                     {
                         startTime:timeNow,
                         endTime:timeNow, 
-                        startProfit:Profit_Graph.profit, 
-                        endProfit:Profit_Graph.profit,
+                        startProfit:profitGraph.profit, 
+                        endProfit:profitGraph.profit,
                         state:document.querySelector('info-table').player_role
                     }
                 )   
             }
         } else if(obj.SPRCHG != undefined) {
-            var player_id = parseInt(oTreeConstants.player_id_in_group);
+            var player_id = parseInt(otreeConstants.playerIDInGroup);
             var smallest_spread = [-1, Number.MAX_SAFE_INTEGER];
-            Spread_Graph.clear();
+            spreadGraph.clear();
             for(var key in obj.SPRCHG){
 
-                delete Spread_Graph.spread_lines[key];
+                delete spreadGraph.spread_lines[key];
                 if(obj.SPRCHG[key] == 0){
                     // Maker has left the market, and needs to set the boolean
                     delete obj.SPRCHG[key];
@@ -222,7 +224,7 @@ Socket Actions
 
                 // process all new spreads  after the zeros have been removed
                 var spread = obj.SPRCHG[key]["A"] - obj.SPRCHG[key]["B"];
-                Spread_Graph.last_spread = spread;
+                spreadGraph.last_spread = spread;
                 if(spread < 0){
                     console.error("Invalid spread calculation from a SPRCHG msg", obj.SPRCHG);
                 }
@@ -235,9 +237,9 @@ Socket Actions
 
             }
 
-            for(var key in Spread_Graph.spread_lines){
+            for(var key in spreadGraph.spread_lines){
                 // process all new spreads  after the zeros have been removed
-                var spread = Spread_Graph.spread_lines[key]["A"] - Spread_Graph.spread_lines[key]["B"];
+                var spread = spreadGraph.spread_lines[key]["A"] - spreadGraph.spread_lines[key]["B"];
                 
                 if(spread < smallest_spread[1]){
                     smallest_spread[0] = parseInt(key);
@@ -247,27 +249,27 @@ Socket Actions
             }
 
             if(smallest_spread[0] == player_id){
-                Spread_Graph.smallest_spread = true;
+                spreadGraph.smallest_spread = true;
             }else{
-                Spread_Graph.smallest_spread = false;
+                spreadGraph.smallest_spread = false;
             }
-            Spread_Graph.drawMySpreadLines(obj.SPRCHG);
+            spreadGraph.drawMySpreadLines(obj.SPRCHG);
             
         } else if(obj.SYNC != undefined){
-            Profit_Graph.adminStartTime = Profit_Graph.getTime();
+            profitGraph.adminStartTime = profitGraph.getTime();
 
-            Profit_Graph.profitSegments = [
+            profitGraph.profitSegments = [
                 {
-                    startTime:Profit_Graph.adminStartTime,
-                    endTime:Profit_Graph.adminStartTime, 
-                    startProfit:Profit_Graph.profit, 
-                    endProfit:Profit_Graph.profit,
+                    startTime:profitGraph.adminStartTime,
+                    endTime:profitGraph.adminStartTime, 
+                    startProfit:profitGraph.profit, 
+                    endProfit:profitGraph.profit,
                     state:"OUT"
                 }
             ];
 
-            Profit_Graph.init(oTreeConstants.startFP, Profit_Graph.startingWealth, "secondTick");
-            requestAnimationFrame(Profit_Graph.draw);
+            profitGraph.init(otreeConstants.startFP, profitGraph.startingWealth, "secondTick");
+            requestAnimationFrame(profitGraph.draw);
 
                 /** Initializing all info table values **/
             document.querySelector('info-table').setAttribute("player_id","{{player.id_in_group}}");
@@ -278,7 +280,7 @@ Socket Actions
             document.querySelector('info-table').setAttribute("spread_value","N/A");     
             document.querySelector('info-table').setAttribute("num_makers","0"); 
             document.querySelector('info-table').setAttribute("num_snipers","0"); 
-            document.querySelector('info-table').setAttribute("profit",oTreeConstants.starting_wealth*(1-4)); 
+            document.querySelector('info-table').setAttribute("profit",otreeConstants.startingWealth*(1-4)); 
             document.querySelector('info-table').setAttribute("fp"," "+ {{player.fp}} * (1e-4) + " "); 
             document.querySelector('info-table').setAttribute("curr_bid","N/A"); 
             document.querySelector('info-table').setAttribute("curr_ask","N/A");
@@ -288,20 +290,20 @@ Socket Actions
             document.querySelector(".overlay").style.pointerEvents = 'none';
                 
             window.setTimeout(function(){
-                Profit_Graph.clear();
-                Spread_Graph.clear();
-                oTreeConstants.end_msg = "on";
+                profitGraph.clear();
+                spreadGraph.clear();
+                otreeConstants.endMsg = "on";
                 var msg = {
                     type: 'advance_me',
                 };
-                oTreeConstants.end_msg = msg;    
+                otreeConstants.endMsg = msg;    
                 if (socketActions.socket.readyState === socketActions.socket.OPEN) {
                     socketActions.socket.send(JSON.stringify(msg));
                 }
                 document.querySelector(".overlay").style.opacity = 0.95;
                 document.querySelector(".overlay").style.pointerEvents = 'all';
                 document.querySelector(".overlay").innerHTML = "<h1 style='font-weight:bold; opacity:1.0;'>End Session, calculating results!</h1>";
-            }, oTreeConstants.round_length * 1000);
+            }, otreeConstants.roundLength * 1000);
 
         } else if(obj.TOTAL != undefined){
             // PLayer State Change message from the backend
@@ -315,9 +317,9 @@ Socket Actions
         } else if(obj.BATCH != undefined){
             console.log("BATCH has come in bruhhhh");
             //if batch has been processed
-            //Spread_Graph.saveSpreadLines();
+            //spreadGraph.saveSpreadLines();
             //Flash Spread Graph
-            Spread_Graph.drawBatchFlash();
+            spreadGraph.drawBatchFlash();
         } else if(obj.BATCH == "B"){
             //If batch start
             //Reset and Start Timer 
@@ -330,21 +332,19 @@ Socket Actions
     };
 
 
-    if(oTreeConstants.file_ready == true){
+    if(otreeConstants.fileReady == true){
         window.setTimeout(function(){
-            console.log("Sending");
-            
-            oTreeConstants.group_id = {{group.id}};
-            oTreeConstants.player_id = {{player.id}};
-            oTreeConstants.player_id_in_group = {{player.id_in_group}}; 
-            oTreeConstants.speed_cost = {{Constants.long_delay}};
-            oTreeConstants.max_spread = {{player.max_spread}}; 
-            oTreeConstants.default_spread = {{player.spread}};
-            oTreeConstants.starting_wealth = {{player.profit}};
-            oTreeConstants.startFP = {{player.default_fp}}; 
-            oTreeConstants.smallest_spread = {"key":-1, "spread":oTreeConstants.max_spread};
-            oTreeConstants.round_length = {{subsession.round_length}};
-            oTreeConstants.speed_cost = {{player.speed_cost}} * (1e-9);
+            otreeConstants.groupID = {{group.id}};
+            otreeConstants.playerID = {{player.id}};
+            otreeConstants.playerIDInGroup = {{player.id_in_group}}; 
+            otreeConstants.speedCost = {{Constants.long_delay}};
+            otreeConstants.maxSpread = {{player.max_spread}}; 
+            otreeConstants.defaultSpread = {{player.spread}};
+            otreeConstants.startingWealth = {{player.profit}};
+            otreeConstants.startFP = {{player.default_fp}}; 
+            otreeConstants.smallestSpread = {"key":-1, "spread":otreeConstants.maxSpread};
+            otreeConstants.roundLength = {{subsession.round_length}};
+            otreeConstants.speedCost = {{player.speed_cost}} * (1e-9);
 
             var msg = {
                 type: 'player_ready',
